--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=G-Cinema
+APP_NAME="Gabriel App"
 APP_ENV=local
 APP_KEY=base64:pF598Xuq6/ehIw9xsHsyUI6Ja2IEYzu2GtN4IDoBUqM=
 APP_DEBUG=true
